fix: align pager at the bottom of the table block.

--- a/client/src/components/main/table/HitsTable.scss
+++ b/client/src/components/main/table/HitsTable.scss
@@ -1,14 +1,12 @@
 @import '../../../styles/elements.scss';
 
-.table-container {
+.flex-table-parent {
   height: 100%;
-  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
-table {
-  width: calc(100% - 10px);
-  border-collapse: collapse;
-}
 
 //thead th {
 //  position: sticky;
